tests/should_fail/wrong_return_type_void.nv
module wrong_return_type_void
// SHOULD FAIL: function declared void but returns a value
fn do_thing() {
    return 42
}
